[gd_scene load_steps=10 format=3 uid="uid://bybh8l8yuc3bu"]

[ext_resource type="Script" path="res://Scripts/Game/wave_beam.gd" id="1_dyhhy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_887gv"]
transparency = 1
shading_mode = 0

[sub_resource type="CylinderMesh" id="CylinderMesh_iilef"]
material = SubResource("StandardMaterial3D_887gv")
top_radius = 10.0
bottom_radius = 10.0
height = 1000.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4448h"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.439216)

[sub_resource type="CylinderMesh" id="CylinderMesh_34iih"]
material = SubResource("StandardMaterial3D_4448h")
top_radius = 13.0
bottom_radius = 13.0
height = 1000.0

[sub_resource type="Animation" id="Animation_j13de"]
resource_name = "start"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("inner:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Outer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn"
}]
}

[sub_resource type="Animation" id="Animation_mrdju"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("inner:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Outer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_s0s1s"]
resource_name = "stop"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("inner:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Outer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0, 0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"delete"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x8etw"]
_data = {
"RESET": SubResource("Animation_mrdju"),
"start": SubResource("Animation_j13de"),
"stop": SubResource("Animation_s0s1s")
}

[node name="WaveBeam" type="Node3D"]
script = ExtResource("1_dyhhy")

[node name="inner" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_iilef")

[node name="Outer" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_34iih")

[node name="Bottem" type="Node3D" parent="."]

[node name="Marker3D" type="Marker3D" parent="Bottem"]

[node name="Marker3D4" type="Marker3D" parent="Bottem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="Marker3D5" type="Marker3D" parent="Bottem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)

[node name="Marker3D2" type="Marker3D" parent="Bottem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)

[node name="Marker3D3" type="Marker3D" parent="Bottem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)

[node name="Top" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25.9002, 0)

[node name="Marker3D" type="Marker3D" parent="Top"]

[node name="Marker3D4" type="Marker3D" parent="Top"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="Marker3D5" type="Marker3D" parent="Top"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)

[node name="Marker3D2" type="Marker3D" parent="Top"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)

[node name="Marker3D3" type="Marker3D" parent="Top"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x8etw")
}

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
